welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:5: error: not found: value col
    if (isFacingTrail(col:Color)) {
                      ^